# SERVER-PRGX-AG

./: .env.example  .gitignore  AGENTS.md  ATR_MF_AUGMENTED_PERCEPTION_ARCHITECTURE_TH.md  BUGFIX_PROPOSAL.md  OFFICIAL_SYSTEM_INTEGRATION_REPORT_TH.md  README.md  pyproject.toml
.github/: ENVIRONMENTS.md
.github/workflows/: auto-assign.yml  codeql.yml  main.yml  prgx-heal-pr.yml  prgx-nightly.yml  prgx-scan.yml  prgx-test.yml  proof-html.yml  stale.yml  static.yml
.prgx-ag/allowlists/: dependency_policy.yaml  writable_paths.txt
.prgx-ag/denylists/: protected_paths.txt
.prgx-ag/evidence/: medical_research_findings.json
.prgx-ag/manifests/: critical_files.yaml  expected_structure.yaml  protected_paths.yaml  writable_paths.yaml
.prgx-ag/policy/: patimokkha.yaml  ruleset.yaml
.prgx-ag/state/: gem_log.json  learning_state.json
.prgx-ag/translation/: aethebud_matrix.yaml
.prgx-ag/workflows/: dependency_repair.yaml  scan_only.yaml  self_healing.yaml  structure_repair.yaml
src/prgx_ag/: __init__.py  config.py  logging_config.py  main.py
src/prgx_ag/agents/: __init__.py  prgx1_sentry.py  prgx2_mechanic.py  prgx3_diplomat.py
src/prgx_ag/core/: __init__.py  aetherbus.py  base_agent.py  events.py  (+1 more)
tests/: test_aetherbus.py  test_dependency_scanner.py  test_governance_evidence.py  test_healing_narrative.py  test_main_args.py  test_manifest_loader.py  test_nexus_cycle.py  test_patimokkha.py  test_pipeline_integration.py  test_prgx1_sentry.py  test_prgx2_mechanic.py  test_prgx3_diplomat.py  test_rsi_engine.py  test_runtime_profiles.py  test_translation_matrix.py
(+31 files in other folders)
